signin form react component initialized

--- a/src/components/elements/Footer/Footer.scss
+++ b/src/components/elements/Footer/Footer.scss
@@ -3,7 +3,7 @@
 .ui.segment.inverted.footer {
   margin: 0;
   border-radius: 0;
-  background-color: v.$c-dark;
+  background-color: v.$c-neutral;
 }
 
 .ui.stackable.inverted.menu.secondary.footer__menu {
