delete "navLink" and fix active link on items nav

--- a/src/components/elements/Footer/Footer.scss
+++ b/src/components/elements/Footer/Footer.scss
@@ -18,6 +18,15 @@
   width: auto !important;
 }
 
+.ui.secondary.pointing.menu .item.footer__logo {
+  border: none;
+}
+
 .ui.menu .item > img:not(.ui).footer__img {
   width: 5rem;
+}
+
+.footer__contact a {
+  text-decoration: underline;
+  color: v.$c-primary-g;
 }
