--- a/src/components/elements/Header/Header.scss
+++ b/src/components/elements/Header/Header.scss
@@ -17,7 +17,7 @@
   align-items: center;
 }
 
-.ui.menu .item > img:not(.ui).header__img {
+.header__img {
   width: 7rem;
 }
 .ui.stackable.inverted.pointing.menu.secondary.header__menu .item {
