styles on header, burger and menuMobile + transform burger icon on cross icon

--- a/src/components/elements/Header/Header.scss
+++ b/src/components/elements/Header/Header.scss
@@ -4,7 +4,8 @@
   border-radius: 0;
   display: flex;
   justify-content: space-between;
-  align-self: center;
+  align-items: center;
+  position: relative;
 }
 .ui.menu {
   justify-content: space-between;
@@ -15,6 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 0;
 }
 
 .header__img {
