commFB_redirection to books page : ok // install feature recaptcha => to do something in back

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,6 @@
 @use 'typography' as t;
 
 // penser à l'enlever quand chaque page aura du contenu
-main {
-  height: 75vh;
-}
+// main {
+//   height: 75vh;
+// }
