--- a/src/components/pages/SignUp/SignUp.scss
+++ b/src/components/pages/SignUp/SignUp.scss
@@ -1,8 +1,10 @@
-.ui.inverted.segment {
-  display: flex;
-  justify-content: center;
-
-}
-.Form__SignUp {
-  width: 600px;
+.signup {
+  &.ui.inverted.segment {
+    display: flex;
+    justify-content: center;
+    border-radius: none;
+  }
+  &__form {
+    width: 30rem;
+  }
 }
