--- a/src/components/elements/Header/MenuMobile/MenuMobile.scss
+++ b/src/components/elements/Header/MenuMobile/MenuMobile.scss
@@ -5,6 +5,7 @@
     top: 100%;
     width: 100%;
     height: calc(100vh - 100%);
+    z-index: 10;
     transition: left 0.3s ease-in-out;
 
     &.is-open {
