46-fix add box shadow on header

--- a/src/components/elements/Header/Header.scss
+++ b/src/components/elements/Header/Header.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
+  box-shadow: 0 0 10px rgba(v.$c-light, 0.4);
 }
 .ui.menu {
   justify-content: space-between;
