46-fix change color of footer

--- a/src/components/elements/Footer/Footer.scss
+++ b/src/components/elements/Footer/Footer.scss
@@ -3,7 +3,7 @@
 .ui.segment.inverted.footer {
   margin: 0;
   border-radius: 0;
-  background-color: v.$c-neutral;
+  background-color: v.$c-darkest;
 }
 
 .ui.stackable.inverted.menu.secondary.footer__menu {
