57-shadow on footer

--- a/src/components/elements/Footer/Footer.scss
+++ b/src/components/elements/Footer/Footer.scss
@@ -4,6 +4,7 @@
   margin: 0;
   border-radius: 0;
   background-color: v.$c-darkest;
+  box-shadow: 0 0 10px rgba(v.$c-light, 0.4);
 }
 
 .ui.stackable.inverted.menu.secondary.footer__menu {
