57-min 100vh for all the pages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,20 @@
 @use 'variables' as v;
 @use 'font' as f;
 @use 'typography' as t;
+
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+  background-color: black;
+}
