57-change padding on signup

--- a/src/components/pages/SignUp/SignUp.scss
+++ b/src/components/pages/SignUp/SignUp.scss
@@ -1,6 +1,6 @@
 .signup {
   &.ui.inverted.segment {
-    padding-block: 3rem;
+    padding: 3rem 0 6rem 0;
     display: flex;
     justify-content: center;
     border-radius: 0;
