57- add error messages before callAPI on 4 forms

--- a/src/components/pages/SignUp/SignUp.scss
+++ b/src/components/pages/SignUp/SignUp.scss
@@ -14,3 +14,13 @@
 .ui.form .field.signup__field {
   margin: 0 0 2rem;
 }
+
+.ui.button.signup__field-eye {
+  margin: 0;
+  padding: 1rem 1rem 1rem 1.5rem;
+  border-radius: 0 0.28571429rem 0.28571429rem 0;
+}
+
+#password {
+  border-radius: 0.28571429rem 0 0 0.28571429rem;
+}
