--- a/src/components/pages/SignUp/SignUp.scss
+++ b/src/components/pages/SignUp/SignUp.scss
@@ -1,18 +1,27 @@
 .signup {
   &.ui.inverted.segment {
-    padding: 3rem 0 6rem 0;
-    display: flex;
-    justify-content: center;
+    margin: 2rem;
+    padding-inline: 3rem;
     border-radius: 0;
     background-color: black;
+    border-radius: 0.5rem;
+    max-width: 30rem;
   }
   &__form {
-    width: 24rem;
+    // width: 24rem;
   }
 }
 
+.ui.center.aligned.header.signup__header {
+  display: flex;
+  padding: 1rem;
+}
+
 .ui.form .field.signup__field {
-  margin: 0 0 2rem;
+  margin: 0 0 3rem;
+  & #email {
+    border-radius: 0.28571429rem;
+  }
 }
 
 .ui.button.signup__field-eye {
