intégration de la nav bar en fonction de isLogged

--- a/src/components/elements/Card/Card.scss
+++ b/src/components/elements/Card/Card.scss
@@ -6,6 +6,18 @@
 
 }
 
+.ui.card.content {
+    padding-top: 0em;
+}
+
+.image {
+    margin: 0;
+}
+
+.ui.inverted.segment {
+    padding: 0;
+}
+
 #card__image{
     display: flex;
     justify-content: center;
