--- a/src/components/pages/Landing/Landing.scss
+++ b/src/components/pages/Landing/Landing.scss
@@ -19,7 +19,7 @@ main {
     margin-inline: 2rem;
   }
   @media screen and (min-width: 1280px) {
-    max-width: 1200px;
+    // max-width: 1200px;
     margin: auto;
   }
 }
