70- change style for signin and signup form

--- a/src/components/pages/SignUp/SignUp.scss
+++ b/src/components/pages/SignUp/SignUp.scss
@@ -2,13 +2,9 @@
   &.ui.inverted.segment {
     margin: 2rem;
     padding-inline: 3rem;
-    border-radius: 0;
     background-color: black;
     border-radius: 0.5rem;
     max-width: 30rem;
-  }
-  &__form {
-    // width: 24rem;
   }
 }
 
@@ -18,9 +14,13 @@
 }
 
 .ui.form .field.signup__field {
-  margin: 0 0 3rem;
+  margin: 0 0 3rem 0;
+
   & #email {
     border-radius: 0.28571429rem;
+  }
+  & #password {
+    border-radius: 0.28571429rem 0 0 0.28571429rem;
   }
 }
 
@@ -28,8 +28,4 @@
   margin: 0;
   padding: 1rem 1rem 1rem 1.5rem;
   border-radius: 0 0.28571429rem 0.28571429rem 0;
-}
-
-#password {
-  border-radius: 0.28571429rem 0 0 0.28571429rem;
 }
