70- change style for reset and new password

--- a/src/components/pages/NewPassword/NewPassword.scss
+++ b/src/components/pages/NewPassword/NewPassword.scss
@@ -1,14 +1,17 @@
 .new-password {
   &.ui.inverted.segment {
-    padding: 8rem 0 6rem 0;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 0;
+    margin: 2rem;
+    padding-inline: 3rem;
     background-color: black;
+    border-radius: 0.5rem;
+    max-width: 30rem;
   }
-  &__form {
-    width: 24rem;
-    margin-bottom: 1rem;
-  }
+}
+
+.ui.center.aligned.header.new-password__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
 }
