--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -15,41 +15,48 @@ body {
 }
 
 h1,
-.h1 {
+.h1,
+#h1 {
   font-weight: 900;
   font-size: 3.5rem;
 }
 
 h2,
-.h2 {
+.h2,
+#h2 {
   font-weight: 900;
   font-size: 3rem;
 }
 
 h3,
-.h3 {
+.h3,
+#h3 {
   font-weight: 700;
   font-size: 2.25rem;
 }
 
 h4,
-.h4 {
+.h4,
+#h4 {
   font-weight: 500;
   font-size: 1.25rem;
   text-transform: uppercase;
 }
 
-.text-chapo {
+.text-chapo,
+#text-chapo {
   font-weight: 700;
   font-size: 1.5rem;
 }
 
-.text-corpus {
+.text-corpus,
+#text-corpus {
   font-weight: 400;
   font-size: 1rem;
 }
 
-.text-legend {
+.text-legend,
+#text-legend {
   font-size: 0.75rem;
   font-style: italic;
 }
