--- a/src/components/elements/Card/Card.scss
+++ b/src/components/elements/Card/Card.scss
@@ -2,7 +2,7 @@
 #card__container{
     background-color: #1b1c1d;
     width: 250px;
-    height: fit-content;
+
 
 }
 
@@ -12,6 +12,7 @@
 
 .image {
     margin: 0;
+    
 }
 
 .ui.inverted.segment {
@@ -21,6 +22,12 @@
 #card__image{
     display: flex;
     justify-content: center;
+    height: 250px;
+    width: auto;
+    zoom: 1.3;
+    clip-path: inset(0px 0px 60px 0px);
+    margin-bottom: -60px;
+
 }
 
 #card__author{
