--- a/src/components/pages/Bookers/Bookers.scss
+++ b/src/components/pages/Bookers/Bookers.scss
@@ -12,7 +12,6 @@ main {
   padding-left: 20rem;
   padding-right: 20rem;
   padding-bottom: 10rem;
-
 }
 
 
@@ -75,11 +74,12 @@ p {
 }
 
 .ui.grid {
+  max-width: 1400px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
   padding: 0;
   align-content: center;
-  justify-content: center;
+  justify-content: left;
 }
