mise en place de la grille responsive de libres

--- a/src/components/pages/Bookers/Bookers.scss
+++ b/src/components/pages/Bookers/Bookers.scss
@@ -9,8 +9,8 @@ body {
 }
 main {
   background-color: black;
-  padding-left: 20rem;
-  padding-right: 20rem;
+  // padding-left: 20rem;
+  // padding-right: 20rem;
   padding-bottom: 10rem;
 }
 
