--- a/src/components/elements/Card/Card.scss
+++ b/src/components/elements/Card/Card.scss
@@ -3,9 +3,6 @@
     background-color: #1b1c1d;
     width: 230px;
     min-width: 230px;
-    
-
-
 }
 
 .ui.card.content {
@@ -33,7 +30,7 @@
 }
 
 #card__author{
-    line-height: 0.5;
+    font-size: 1rem;
 }
 
 
@@ -41,6 +38,7 @@
     font-size: 1rem;
     font-weight: 300;
 }
+
 
 h4, .h4 {
     margin: none;
@@ -52,7 +50,7 @@ h4, .h4 {
 }
 
 .ui.card>.content>.header {
-    font-size: 1.6rem;
+    // font-size: 1.6rem;
     width: 200px;
     height: 32px;
     overflow: hidden;
