--- a/src/components/elements/Card/Card.scss
+++ b/src/components/elements/Card/Card.scss
@@ -3,6 +3,7 @@
     background-color: #1b1c1d;
     width: 230px;
     min-width: 230px;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 25%), 0 0 0 1px rgb(0 0 0 / 40%);
 }
 
 .ui.card.content {
