--- a/src/components/elements/Card/Card.scss
+++ b/src/components/elements/Card/Card.scss
@@ -3,6 +3,7 @@
     background-color: #1b1c1d;
     width: 230px;
     min-width: 230px;
+    height:476px;
     box-shadow: 0 1px 3px 0 rgb(0 0 0 / 25%), 0 0 0 1px rgb(0 0 0 / 40%);
 }
 
@@ -64,4 +65,11 @@ h4, .h4 {
     border-color:  #82A4F0;
     border-radius: 8px;
     color: #2B2D2E;
+}
+
+#card__icon {
+   
+}
+.img.ui.right.floated.image {
+
 }
