--- a/src/components/elements/Card/Card.scss
+++ b/src/components/elements/Card/Card.scss
@@ -1,73 +1,92 @@
-
-#card__container{
+#card__container {
+  background-color: #1b1c1d;
+  width: 230px;
+  min-width: 230px;
+  border-bottom-style: solid 1px;
+  border-color: gray;
+  height: 460px;
+  box-shadow:
+    0 1px 3px 0 rgb(0 0 0 / 25%),
+    0 0 0 1px rgb(0 0 0 / 40%);
+  &:hover {
+    transition: all 0.2s ease-out;
+    box-shadow: 0px 4px 8px #2165f8;
+    top: -4px;
+    border: 1px solid #2165f8;
     background-color: #1b1c1d;
-    width: 230px;
-    min-width: 230px;
-    height:476px;
-    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 25%), 0 0 0 1px rgb(0 0 0 / 40%);
+  }
 }
 
 .ui.card.content {
-    padding-top: 0em;
+  padding-top: 0em;
+  padding-bottom: 0px;
 }
 
+// div.content {
+//   height: 130px;
+//   padding-bottom: 0px;
+// }
+
 .image {
-    margin: 0;
-    
+  margin: 0;
+}
+
+.ui.right.floated.image {
+  margin-bottom: 3px;
 }
 
 .ui.inverted.segment {
-    padding: 0;
+  padding: 0;
 }
 
-#card__image{
-    display: flex;
-    justify-content: center;
-    height: 250px;
-    width: auto;
-    zoom: 1.3;
-    clip-path: inset(0px 0px 60px 0px);
-    margin-bottom: -60px;
-
+#card__image {
+  display: flex;
+  justify-content: center;
+  height: 250px;
+  width: auto;
+  zoom: 1.3;
+  clip-path: inset(0px 0px 60px 0px);
+  margin-bottom: -60px;
 }
 
-#card__author{
-    font-size: 1rem;
+#card__author {
+  font-size: 1rem;
 }
-
 
 .h3.ui.grey.inverted.header {
-    font-size: 1rem;
-    font-weight: 300;
+  font-size: 1rem;
+  font-weight: 300;
 }
 
-
-h4, .h4 {
-    margin: none;
-    line-height: 0.5;
+h4.ui.grey.inverted.header {
+  margin-bottom: 0px;
+  margin-top: 8px;
+  font-style: italic;
+  height: 40px;
 }
 
 .small.centered.fluid.image.class__image {
-    margin: 0;
+  margin: 0;
 }
 
-.ui.card>.content>.header {
-    // font-size: 1.6rem;
-    width: 180px;
-    height: 32px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+.ui.card > .content > .header {
+  // font-size: 1.6rem;
+  width: 185px;
+  height: 45px;
+  margin-bottom: 1px;
+  margin-top: 10px;
+  overflow: hidden;
+  white-space: wrap;
+  // text-overflow: ellipsis;
 }
 
-#card__label{
-    background-color: #82A4F0;
-    border-color:  #82A4F0;
-    border-radius: 8px;
-    color: #2B2D2E;
+#card__label {
+  background-color: #82a4f0;
+  border-color: #82a4f0;
+  border-radius: 8px;
+  color: #2b2d2e;
 }
-
 
 .card__content__favorite.hidden {
-    display: none;
+  display: none;
 }
