--- a/src/components/pages/SignIn/SignIn.scss
+++ b/src/components/pages/SignIn/SignIn.scss
@@ -7,7 +7,7 @@
     background-color: black;
     border-radius: 0.5rem;
     max-width: 30rem;
-   
+    background-color: rgba(6, 138, 6, 0.173);
   }
 }
 
