--- a/src/components/elements/Card/Card.scss
+++ b/src/components/elements/Card/Card.scss
@@ -10,9 +10,9 @@
     0 0 0 1px rgb(0 0 0 / 40%);
   &:hover {
     transition: all 0.2s ease-out;
-    box-shadow: 0px 4px 8px #2165f8;
+    box-shadow: 0px 8px 8px #363636;
     top: -4px;
-    border: 0.5px solid #2165f8;
+    border: 0.5px solid  #363636;
     background-color: #1b1c1d;
   }
 }
