--- a/src/components/pages/CGU/CGU.scss
+++ b/src/components/pages/CGU/CGU.scss
@@ -2,25 +2,29 @@
 
 .CGU {
   max-width: 1100px;
+  padding-inline: 2rem;
   margin: 2rem auto;
   color: v.$c-lightest;
   font-size: 1.3rem;
+
+  & h1 {
+    margin: 2rem 0;
+  }
+
+  & h2 {
+    padding-bottom: 1rem;
+    border-bottom: 1px dotted v.$c-lightest;
+  }
   & section {
-    margin: 3rem 0;
+    margin: 4rem 0;
   }
   & section:hover {
-    border-left: 2px solid v.$c-lightest;
-    padding-left: 3rem;
+    @media screen and (min-width: 800px) {
+      border-left: 2px solid v.$c-lightest;
+      padding-left: 3rem;
+    }
   }
-}
-
-li {
-  margin: 1rem;
-}
-
-h1 {
-  margin: 2rem 0;
-}
-h2 {
-  border-bottom: 1px dotted v.$c-lightest;
+  & li {
+    margin: 1rem;
+  }
 }
