--- a/src/components/elements/Card/Card.scss
+++ b/src/components/elements/Card/Card.scss
@@ -5,6 +5,7 @@
   border-bottom-style: solid 1px;
   border-color: gray;
   height: 460px;
+  cursor: pointer;
   box-shadow:
     0 1px 3px 0 rgb(0 0 0 / 25%),
     0 0 0 1px rgb(0 0 0 / 40%);
