--- a/src/components/elements/Footer/Footer.scss
+++ b/src/components/elements/Footer/Footer.scss
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0.5rem;
 }
 
 .ui.stackable.inverted.pointing.menu.secondary.footer__menu .item {
@@ -24,7 +25,7 @@
 }
 
 .ui.menu .item > img:not(.ui).footer__img {
-  width: 5rem;
+  width: 4rem;
 }
 
 .footer__contact a {
