--- a/src/components/pages/NewPassword/NewPassword.scss
+++ b/src/components/pages/NewPassword/NewPassword.scss
@@ -1,8 +1,8 @@
 .new-password {
   &.ui.inverted.segment {
     margin: 2rem;
-    padding-inline: 3rem;
-    background-color: black;
+    padding: 3rem;
+    background-color: rgba(10, 140, 50, 0.3);
     border-radius: 0.5rem;
     max-width: 30rem;
   }
