--- a/src/components/elements/Card/Card.scss
+++ b/src/components/elements/Card/Card.scss
@@ -5,6 +5,8 @@
   border-bottom-style: solid 1px;
   border-color: gray;
   height: 460px;
+  border-radius: 10px;
+  overflow: hidden;
   cursor: pointer;
   box-shadow:
     0 1px 3px 0 rgb(0 0 0 / 25%),
@@ -82,6 +84,6 @@ h4.ui.grey.inverted.header {
   color: #2b2d2e;
 }
 
-.card__content__favorite.hidden {
-  display: none;
-}
+// .card__content__favorite.hidden {
+//   display: none;
+// }
